Removed "²" suffix from 2.x branch
We have enabled "Show Versioning Labels" in NetBeans instead.

--- a/book/pom.xml
+++ b/book/pom.xml
@@ -36,15 +36,15 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     <module.name>com.semanticcms.news.servlet.book</module.name>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-news-servlet</documented.artifactId>
-    <documented.name>SemanticCMS News Servlet²</documented.name>
+    <documented.name>SemanticCMS News Servlet</documented.name>
     <documented.description>SemanticCMS newsfeeds in a Servlet environment.</documented.description>
 
     <description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
   </properties>
 
-  <name>SemanticCMS News Servlet² Book</name>
+  <name>SemanticCMS News Servlet Book</name>
   <url>https://semanticcms.com/news/servlet/</url>
-  <description>Documentation for SemanticCMS News Servlet² in SemanticCMS format.</description>
+  <description>Documentation for SemanticCMS News Servlet in SemanticCMS format.</description>
   <inceptionYear>2016</inceptionYear>
 
   <licenses>
