--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@ along with semanticcms-news-servlet.  If not, see <https://www.gnu.org/licenses/
     <sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
   </properties>
 
-  <name>SemanticCMS News Servlet²</name>
+  <name>SemanticCMS News Servlet</name>
   <url>https://semanticcms.com/news/servlet/</url>
   <description>SemanticCMS newsfeeds in a Servlet environment.</description>
   <inceptionYear>2016</inceptionYear>
